[gd_scene load_steps=11 format=3 uid="uid://c2jmhy2eyq361"]

[ext_resource type="PackedScene" uid="uid://kf6tycunr25q" path="res://scenes/rooms/meshes/roomwall.blend" id="1_joiea"]
[ext_resource type="PackedScene" uid="uid://dckwsfoqyd7yd" path="res://scenes/rooms/meshes/simplefloor.glb" id="2_fl883"]
[ext_resource type="PackedScene" uid="uid://dltymdyks2yxi" path="res://scenes/loot/trophy.tscn" id="3_06beb"]
[ext_resource type="PackedScene" uid="uid://dnallaxvdf31p" path="res://scenes/rooms/meshes/roomwall_cornercap.blend" id="3_v8raw"]
[ext_resource type="PackedScene" uid="uid://b7lslbxgj6psm" path="res://scenes/rooms/meshes/roomwall_door.blend" id="4_ij7n1"]
[ext_resource type="PackedScene" uid="uid://yhe2m0onfh4t" path="res://scenes/rooms/meshes/simpleceiling.glb" id="5_gm40r"]
[ext_resource type="PackedScene" uid="uid://8qqqf4tvfy1l" path="res://scenes/rooms/meshes/roughwall.blend" id="6_v8raw"]
[ext_resource type="PackedScene" uid="uid://ipk7tlufbxkm" path="res://scenes/rooms/meshes/roughwall_cell_door.blend" id="7_ij7n1"]
[ext_resource type="Script" uid="uid://dkuc2goe2m1h" path="res://scripts/reps/shifting_walls_puzzle.gd" id="8_ij7n1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v8raw"]
size = Vector3(1.8, 2, 1.8)

[node name="RoomCorner3d" type="Node3D"]

[node name="Shifting Crossroads Walls Puzzle" type="Node" parent="." node_paths=PackedStringArray("_crossroads_west_wall", "_crossroads_east_wall", "_crossroads_south_wall", "_crossroads_north_wall", "_gate_wall")]
script = ExtResource("8_ij7n1")
_crossroads_west_wall = NodePath("../Geometry/crossroads west wall")
_crossroads_east_wall = NodePath("../Geometry/crossroads east wall")
_crossroads_south_wall = NodePath("../Geometry/crossroads south wall")
_crossroads_north_wall = NodePath("../Geometry/crossroads north wall")
_gate_wall = NodePath("../Geometry/roughwall_cell_door")

[node name="Geometry" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 3)

[node name="roomwall" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 2)

[node name="roomwall2" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="roomwall4" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -2)

[node name="roomwall21" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4)

[node name="roomwall22" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -6)

[node name="crossroads west wall" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6)

[node name="trophy2" parent="Geometry/crossroads west wall" instance=ExtResource("3_06beb")]
transform = Transform3D(0.26057187, 0, 0.96545446, 0, 1, 0, -0.96545446, 0, 0.26057187, -0.2356236, 5.9604645e-08, -0.44469738)
_pickup_distance_sq = 4.0

[node name="roomwall23" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4)

[node name="roomwall24" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="roomwall25" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8)

[node name="roomwall5" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(2.9802322e-08, 0, -1, 0, 1, 0, 1, 0, 2.9802322e-08, -4, 0, -8)

[node name="roomwall7" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(2.9802322e-08, 0, -1, 0, 1, 0, 1, 0, 2.9802322e-08, -2, 0, -8)

[node name="roomwall9" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(2.9802322e-08, 0, -1, 0, 1, 0, 1, 0, 2.9802322e-08, 2, 0, -8)

[node name="crossroads north wall" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(2.9802322e-08, 0, -1, 0, 1, 0, 1, 0, 2.9802322e-08, 0, 0, -8)

[node name="roomwall18" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(2.9802322e-08, 0, -1, 0, 1, 0, 1, 0, 2.9802322e-08, 4, 0, -8)

[node name="roomwall6" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(2.9802322e-08, 0, -1, 0, 1, 0, 1, 0, 2.9802322e-08, -2, 0, -4)

[node name="roomwall8" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(2.9802322e-08, 0, -1, 0, 1, 0, 1, 0, 2.9802322e-08, 2, 0, -4)

[node name="roomwall10" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, 6, 0, -4)

[node name="roomwall19" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, 6, 0, -6)

[node name="roomwall27" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, 2, 0, -6)

[node name="roomwall29" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, 2, 0, -10)

[node name="roomwall28" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, -2, 0, -6)

[node name="roomwall20" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, 6, 0, -8)

[node name="crossroads east wall" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, 2, 0, -8)

[node name="trophy2" parent="Geometry/crossroads east wall" instance=ExtResource("3_06beb")]
transform = Transform3D(0.41483626, 0, 0.9098962, 0, 1, 0, -0.9098962, 0, 0.41483626, -0.11635077, 0, -0.48228455)
_pickup_distance_sq = 4.0

[node name="roomwall11" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, 6, 0, -2)

[node name="roomwall12" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, 4, 0, 0)

[node name="roomwall13" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(-1, 0, 1.3909066e-08, 0, 1, 0, -1.3909066e-08, 0, -1, 4, 0, 2)

[node name="roomwall14" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(5.7620454e-08, 0, 1, 0, 1, 0, -1, 0, 5.7620454e-08, 4, 0, 4)

[node name="roomwall17" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(5.7620454e-08, 0, 1, 0, 1, 0, -1, 0, 5.7620454e-08, 4, 0, -6)

[node name="crossroads south wall" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(5.7620454e-08, 0, 1, 0, 1, 0, -1, 0, 5.7620454e-08, 2, 0, -6)

[node name="trophy2" parent="Geometry/crossroads south wall" instance=ExtResource("3_06beb")]
transform = Transform3D(0.0025655758, 0, 0.9999967, 0, 1, 0, -0.9999967, 0, 0.0025655758, -0.20856333, 0, -0.695626)
_pickup_distance_sq = 4.0

[node name="roomwall33" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(5.7620454e-08, 0, 1, 0, 1, 0, -1, 0, 5.7620454e-08, 6, 0, 0)

[node name="roomwall32" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(5.7620454e-08, 0, 1, 0, 1, 0, -1, 0, 5.7620454e-08, 0, 0, -6)

[node name="roomwall15" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(5.7620454e-08, 0, 1, 0, 1, 0, -1, 0, 5.7620454e-08, 0, 0, 4)

[node name="roomwall16" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(5.7620454e-08, 0, 1, 0, 1, 0, -1, 0, 5.7620454e-08, -2, 0, 0)

[node name="roomwall3" parent="Geometry" instance=ExtResource("1_joiea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 4)

[node name="simplefloor" parent="Geometry" instance=ExtResource("2_fl883")]

[node name="simplefloor2" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="simplefloor3" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="simplefloor4" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="simplefloor5" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)

[node name="simplefloor6" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 4)

[node name="simplefloor7" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="simplefloor8" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="simplefloor9" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 2)

[node name="simplefloor12" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 4)

[node name="simplefloor10" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2)

[node name="simplefloor11" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -2)

[node name="Area Out Left" type="Area3D" parent="Geometry/simplefloor11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/simplefloor11/Area Out Left"]
shape = SubResource("BoxShape3D_v8raw")

[node name="simplefloor13" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4)

[node name="Area Left In" type="Area3D" parent="Geometry/simplefloor13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/simplefloor13/Area Left In"]
shape = SubResource("BoxShape3D_v8raw")

[node name="simplefloor14" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -6)

[node name="simplefloor19" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -6)

[node name="simplefloor20" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6)

[node name="Area CrossRoads" type="Area3D" parent="Geometry/simplefloor20"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/simplefloor20/Area CrossRoads"]
shape = SubResource("BoxShape3D_v8raw")

[node name="simplefloor25" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8)

[node name="simplefloor26" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="Area Goal" type="Area3D" parent="Geometry/simplefloor26"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/simplefloor26/Area Goal"]
shape = SubResource("BoxShape3D_v8raw")

[node name="trophy2" parent="Geometry/simplefloor26" instance=ExtResource("3_06beb")]
transform = Transform3D(0.887992, 0, -0.45985883, 0, 1, 0, 0.45985883, 0, 0.887992, 1.3303225, -1.1920929e-07, -1.374094)
_pickup_distance_sq = 4.0

[node name="simplefloor21" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="simplefloor22" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4)

[node name="Area In Right" type="Area3D" parent="Geometry/simplefloor22"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/simplefloor22/Area In Right"]
shape = SubResource("BoxShape3D_v8raw")

[node name="simplefloor23" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -6)

[node name="simplefloor24" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -6)

[node name="simplefloor15" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Area Out Mid" type="Area3D" parent="Geometry/simplefloor15"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/simplefloor15/Area Out Mid"]
shape = SubResource("BoxShape3D_v8raw")

[node name="simplefloor16" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2)

[node name="simplefloor17" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -2)

[node name="Area Out Right" type="Area3D" parent="Geometry/simplefloor17"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1)
collision_mask = 2
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/simplefloor17/Area Out Right"]
shape = SubResource("BoxShape3D_v8raw")

[node name="simplefloor18" parent="Geometry" instance=ExtResource("2_fl883")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="roomwall_cornercap" parent="Geometry" instance=ExtResource("3_v8raw")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 4, 0, 0)

[node name="roomwall_cornercap3" parent="Geometry" instance=ExtResource("3_v8raw")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -2, 0, -6)

[node name="roomwall_cornercap2" parent="Geometry" instance=ExtResource("3_v8raw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="roomwall_cornercap4" parent="Geometry" instance=ExtResource("3_v8raw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -6)

[node name="roomwall_door" parent="Geometry" instance=ExtResource("4_ij7n1")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 2, 0, 4)

[node name="roomwall_door2" parent="Geometry" instance=ExtResource("4_ij7n1")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -4, 0, -4)

[node name="roomwall_door3" parent="Geometry" instance=ExtResource("4_ij7n1")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, -4)

[node name="roomwall_door4" parent="Geometry" instance=ExtResource("4_ij7n1")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 4, 0, -4)

[node name="simpleceiling" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, 4)

[node name="simpleceiling2" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.8, 4)

[node name="simpleceiling3" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.8, 2)

[node name="simpleceiling4" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, 2)

[node name="simpleceiling5" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.8, 2)

[node name="simpleceiling14" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.8, 4)

[node name="simpleceiling6" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2.8, 0)

[node name="simpleceiling7" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.8, 0)

[node name="simpleceiling8" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, 0)

[node name="simpleceiling9" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.8, 0)

[node name="simpleceiling15" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2.8, 0)

[node name="simpleceiling16" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2.8, -2)

[node name="simpleceiling17" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2.8, -4)

[node name="simpleceiling18" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2.8, -6)

[node name="simpleceiling19" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.8, -6)

[node name="simpleceiling20" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, -6)

[node name="simpleceiling21" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, -4)

[node name="simpleceiling22" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2.8, -4)

[node name="simpleceiling23" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2.8, -6)

[node name="simpleceiling24" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.8, -6)

[node name="simpleceiling25" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, -8)

[node name="simpleceiling26" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, -10)

[node name="simpleceiling10" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.8, -2)

[node name="simpleceiling11" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, -2)

[node name="simpleceiling12" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2.8, -2)

[node name="simpleceiling13" parent="Geometry" instance=ExtResource("5_gm40r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2.8, -2)

[node name="roughwall" parent="Geometry" instance=ExtResource("6_v8raw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="roughwall2" parent="Geometry" instance=ExtResource("6_v8raw")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, -12)

[node name="roughwall3" parent="Geometry" instance=ExtResource("6_v8raw")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 2, 0, -12)

[node name="roughwall_cell_door" parent="Geometry" instance=ExtResource("7_ij7n1")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, -10)

[connection signal="body_entered" from="Geometry/simplefloor11/Area Out Left" to="Shifting Crossroads Walls Puzzle" method="_on_area_out_left_body_entered"]
[connection signal="body_entered" from="Geometry/simplefloor13/Area Left In" to="Shifting Crossroads Walls Puzzle" method="_on_area_left_in_body_entered"]
[connection signal="body_entered" from="Geometry/simplefloor20/Area CrossRoads" to="Shifting Crossroads Walls Puzzle" method="_on_area_cross_roads_body_entered"]
[connection signal="body_entered" from="Geometry/simplefloor26/Area Goal" to="Shifting Crossroads Walls Puzzle" method="_on_area_goal_body_entered"]
[connection signal="body_entered" from="Geometry/simplefloor22/Area In Right" to="Shifting Crossroads Walls Puzzle" method="_on_area_in_right_body_entered"]
[connection signal="body_entered" from="Geometry/simplefloor15/Area Out Mid" to="Shifting Crossroads Walls Puzzle" method="_on_area_out_mid_body_entered"]
[connection signal="body_entered" from="Geometry/simplefloor17/Area Out Right" to="Shifting Crossroads Walls Puzzle" method="_on_area_out_right_body_entered"]
